[bdist_wheel]
universal = 0

[metadata]
description-file = README.rst

[flake8]
ignore = E226,E302,E303,E41,E501
max-line-length = 160
max-complexity = 10
exclude = */*migrations

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 160
multi_line_output = 5
not_skip = __init__.py
skip = docs/conf.py
indent = 4
